attached_assets/Pasted-INFO-root-Scheduler-inicializado-tarefas-peri-dicas-ativas-File-usr-local-lib-python3-11-si-1763691196124_1763691196125.txt
INFO:root:✅ Scheduler inicializado - tarefas periódicas ativas
  File "/usr/local/lib/python3.11/site-packages/gunicorn/arbiter.py", line 117, in setup
    self.app.wsgi()
  File "/usr/local/lib/python3.11/site-packages/gunicorn/app/base.py", line 66, in wsgi
Traceback (most recent call last):
    self.callable = self.load()
  File "/usr/local/bin/gunicorn", line 7, in <module>
    sys.exit(run())
             ^^^^^
  File "/usr/local/lib/python3.11/site-packages/gunicorn/app/wsgiapp.py", line 66, in run
    WSGIApplication("%(prog)s [OPTIONS] [APP_MODULE]", prog=prog).run()
  File "/usr/local/lib/python3.11/site-packages/gunicorn/app/base.py", line 235, in run
    super().run()
  File "/usr/local/lib/python3.11/site-packages/gunicorn/app/base.py", line 71, in run
    Arbiter(self).run()
    ^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/gunicorn/arbiter.py", line 57, in __init__
    self.setup(app)
                    ^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/gunicorn/app/wsgiapp.py", line 57, in load
    return self.load_wsgiapp()
           ^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/gunicorn/app/wsgiapp.py", line 47, in load_wsgiapp
    return util.import_app(self.app_uri)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/gunicorn/util.py", line 370, in import_app
    mod = importlib.import_module(module)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1204, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1176, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1147, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 690, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 940, in exec_module
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/app/main.py", line 4, in <module>
    import routes  # noqa: F401
    ^^^^^^^^^^^^^
  File "/app/routes.py", line 10001
    @app.route('/admin/legendas/<int:id>/excluir', methods=['POST'])
SyntaxError: expected 'except' or 'finally' block